// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  top={50}
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <ForwardRef
      alignItems="center"
      direction={
        Array [
          "column",
          "row",
        ]
      }
      justifyContent="center"
      spacing={4}
    >
      <Text
        color="gray.900"
        fontSize={4}
        textAlign={
          Array [
            "center",
            "left",
          ]
        }
      />
      <Relay(Connect(DebateStepPageVote))
        setVoteState={[MockFunction]}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "debate": Object {
              "$fragmentRefs": null,
            },
            "url": "step/123",
          }
        }
        top={false}
        width="unset"
      />
    </ForwardRef>
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <ForwardRef
      alignItems="center"
      direction={
        Array [
          "column",
          "row",
        ]
      }
      justifyContent="center"
      spacing={4}
    >
      <Text
        color="gray.900"
        fontSize={4}
        textAlign={
          Array [
            "center",
            "left",
          ]
        }
      />
      <Relay(Connect(DebateStepPageVote))
        setVoteState={[MockFunction]}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "debate": Object {
              "$fragmentRefs": null,
            },
            "url": "step/123",
          }
        }
        top={true}
        width="unset"
      />
    </ForwardRef>
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when argumented on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(ReduxForm))
      debate={
        Object {
          "$fragmentRefs": null,
        }
      }
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      isAbsolute={true}
      isMobile={true}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="ARGUMENTED"
      widgetLocation={null}
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when voted 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  top={50}
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(ReduxForm))
      debate={
        Object {
          "$fragmentRefs": null,
        }
      }
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      isAbsolute={true}
      isMobile={false}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="VOTED"
      widgetLocation={null}
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when voted on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(ReduxForm))
      debate={
        Object {
          "$fragmentRefs": null,
        }
      }
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      isAbsolute={true}
      isMobile={true}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="VOTED"
      widgetLocation={null}
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;
